Bug 1895741 - Clear _res when DNS thread is shutdown,  a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D216923